--- a/kubernetes/k8s/doctorms.yaml
+++ b/kubernetes/k8s/doctorms.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: doctor
-          image: imrds7/doctorms:latest
+          image: mohitgupta02/doctorms:latest
           ports:
             - containerPort: 8081
           env:
