--- a/kubernetes/k8s/patientms.yaml
+++ b/kubernetes/k8s/patientms.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: patient
-          image: imrds7/patientms:latest
+          image: mohitgupta02/patientms:latest
           ports:
             - containerPort: 8082
           env:
