--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,2 @@
 [localhost]
-localhost ansible_connection=ssh ansible_user=jenkins ansible_ssh_private_key_file=~/.ssh/id_rsa
+localhost ansible_connection=ssh ansible_user=mohitgupta02 ansible_ssh_private_key_file=~/.ssh/id_rsa
