--- a/ansible-playbook.yaml
+++ b/ansible-playbook.yaml
@@ -2,7 +2,7 @@
 - name: Apply Kubernetes manifests individually
   hosts: localhost
   remote_user: mohitgupta0205
-  become: false
+  become: true
   tasks:
     - name: Apply postgres - database manifest
       command: kubectl apply -f {{ playbook_dir }}/kubernetes/k8s/postgres.yaml
