--- a/ansible-playbook.yaml
+++ b/ansible-playbook.yaml
@@ -2,7 +2,7 @@
 - name: Apply Kubernetes manifests individually
   hosts: localhost
   remote_user: mohitgupta0205
-  become: true
+  become: false
   environment:
     KUBECONFIG: /home/mohitgupta0205/.kube/config
   tasks:
