--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
     restart: unless-stopped
 
   config-server-ms:
-    image: imrds7/config-server-ms:latest
+    image: mohitgupta02/config-server-ms:latest
     container_name: config-server-ms
     ports:
       - 8080:8080
@@ -44,7 +44,7 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
 
   servicereg:
-    image: imrds7/servicereg:latest
+    image: mohitgupta02/servicereg:latest
     container_name: servicereg
     ports:
       - "8761:8761"
@@ -57,7 +57,7 @@ services:
       - clinic-net
 
   appointmentms:
-    image: imrds7/appointmentms:latest
+    image: mohitgupta02/appointmentms:latest
     container_name: appointment
     ports:
       - 8083:8083
@@ -71,7 +71,7 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
 
   doctorms:
-    image: imrds7/doctorms:latest
+    image: mohitgupta02/doctorms:latest
     container_name: doctor
     ports:
       - 8081:8081
@@ -86,7 +86,7 @@ services:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://servicereg:8761/eureka
 
   patientms:
-    image: imrds7/patientms:latest
+    image: mohitgupta02/patientms:latest
     container_name: patient
     ports:
       - 8082:8082
@@ -109,7 +109,7 @@ services:
       - microservice-network
 
   gateway-ms:
-    image: imrds7/gateway-ms:latest
+    image: mohitgupta02/gateway-ms:latest
     ports:
       - 8084:8084
     depends_on:
